--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <title>Vikesh K Iyer</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/portfolio/style.css">
         <link rel="icon" href="https://lh3.googleusercontent.com/a/ACg8ocIFUKjnnfLo9WjwJDqTO9Lr45q0aWIQtwxy-2b7KcOczDmBd_8s=s250-c-rg-br100">
     </head>
     <body>
         <div class="links-container">
-            <a class="links" href="/Calculator/index.html">iOS Calculator</a>
-            <a class="links" href="/Rock paper scissors/game.html">Rock Paper Scissors</a>
-            <a class="links" href="/youtube/youtube.html">Youtube Clone</a>
-            <a class="links" href="/youtube-sidebar/youtube-sidebar.html">Youtube Sidebar</a>
-            <a class="links" href="/buttons/buttons.html">Buttons</a>
+            <a class="links" href="/portfolio/Calculator/index.html">iOS Calculator</a>
+            <a class="links" href="/portfolio/Rock paper scissors/game.html">Rock Paper Scissors</a>
+            <a class="links" href="/portfolio/youtube/youtube.html">Youtube Clone</a>
+            <a class="links" href="/portfolio/youtube-sidebar/youtube-sidebar.html">Youtube Sidebar</a>
+            <a class="links" href="/portfolio/buttons/buttons.html">Buttons</a>
         </div>
     </body>
 </html>
