--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Vikesh K Iyer</title>
-        <link rel="stylesheet" href="/portfolio/style.css">
+        <link rel="stylesheet" href="/style.css">
         <link rel="icon" href="https://lh3.googleusercontent.com/a/ACg8ocIFUKjnnfLo9WjwJDqTO9Lr45q0aWIQtwxy-2b7KcOczDmBd_8s=s250-c-rg-br100">
     </head>
     <body>
