--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div class="links-container">
-            <a class="links" href="/portfolio/Calculator/index.html">iOS Calculator</a>
-            <a class="links" href="/portfolio/Rock paper scissors/game.html">Rock Paper Scissors</a>
-            <a class="links" href="/portfolio/youtube/youtube.html">Youtube Clone</a>
-            <a class="links" href="/portfolio/youtube-sidebar/youtube-sidebar.html">Youtube Sidebar</a>
-            <a class="links" href="/portfolio/buttons/buttons.html">Buttons</a>
+            <a class="links" href="/Calculator/index.html">iOS Calculator</a>
+            <a class="links" href="/Rock paper scissors/game.html">Rock Paper Scissors</a>
+            <a class="links" href="/youtube/youtube.html">Youtube Clone</a>
+            <a class="links" href="/youtube-sidebar/youtube-sidebar.html">Youtube Sidebar</a>
+            <a class="links" href="/buttons/buttons.html">Buttons</a>
         </div>
     </body>
 </html>
